# swc

crates/ast_node/: Cargo.toml
crates/better_scoped_tls/: Cargo.toml
crates/binding_macros/: Cargo.toml
crates/dbg-swc/: Cargo.toml
crates/from_variant/: Cargo.toml
crates/jsdoc/: Cargo.toml
crates/jsdoc/tests/: fixture.rs
crates/preset_env_base/: Cargo.toml
crates/string_enum/: Cargo.toml
crates/string_enum/tests/: simple.rs
crates/swc/: Cargo.toml
crates/swc/benches/: bugs.rs  minify.rs  typescript.rs
crates/swc/examples/: minify.rs  transform.rs  transform_error.rs
crates/swc/tests/: error_msg.rs  exec.rs  projects.rs  rust_api.rs  serde.rs  simple.rs  source_map.rs  tsc.rs
crates/swc_atoms/: Cargo.toml
crates/swc_bundler/: Cargo.toml
crates/swc_bundler/examples/: bundle.rs  path.rs
crates/swc_bundler/tests/: deno.rs  fixture.rs
crates/swc_bundler/tests/common/: mod.rs
crates/swc_cached/: Cargo.toml
crates/swc_cli_impl/: Cargo.toml
crates/swc_common/: Cargo.toml
crates/swc_common/benches/: serde.rs
crates/swc_common/tests/: ast_serde.rs  attr_interop.rs  concurrent.rs  empty.rs  issue_3159.rs  source_map.rs  spanned_attr.rs
crates/swc_compiler_base/: Cargo.toml
crates/swc_config/: Cargo.toml
crates/swc_config_macro/: Cargo.toml
crates/swc_core/: Cargo.toml
crates/swc_core/tests/: integration.rs  quote.rs
crates/swc_core/tests/fixture/stub_napi/src/: lib.rs
crates/swc_core/tests/fixture/stub_wasm/src/: lib.rs
crates/swc_css/: Cargo.toml
crates/swc_css_ast/: Cargo.toml
crates/swc_css_codegen/: Cargo.toml
crates/swc_css_codegen/tests/: fixture.rs
crates/swc_css_codegen_macros/: Cargo.toml
crates/swc_css_compat/: Cargo.toml
crates/swc_css_compat/tests/: fixture.rs
crates/swc_css_lints/: Cargo.toml
crates/swc_css_lints/tests/: lints.rs
crates/swc_css_minifier/: Cargo.toml
crates/swc_css_minifier/benches/: full.rs
crates/swc_css_minifier/tests/: fixture.rs
crates/swc_css_modules/: Cargo.toml
crates/swc_css_modules/tests/: fixture.rs  with_compat.rs
crates/swc_css_parser/: Cargo.toml
crates/swc_css_parser/benches/: compare.rs  lexer.rs  parser.rs
crates/swc_css_parser/tests/: fixture.rs
crates/swc_css_prefixer/: Cargo.toml
crates/swc_css_prefixer/tests/: prefixer.rs
crates/swc_css_utils/: Cargo.toml
crates/swc_css_visit/: Cargo.toml
crates/swc_ecma_ast/: Cargo.toml
crates/swc_ecma_codegen/: Cargo.toml
crates/swc_ecma_codegen_macros/: Cargo.toml
crates/swc_ecma_compat_bugfixes/: Cargo.toml
crates/swc_ecma_compat_common/: Cargo.toml
crates/swc_ecma_compat_es2015/: Cargo.toml
crates/swc_ecma_compat_es2016/: Cargo.toml
crates/swc_ecma_compat_es2017/: Cargo.toml
crates/swc_ecma_compat_es2018/: Cargo.toml
crates/swc_ecma_compat_es2019/: Cargo.toml
crates/swc_ecma_compat_es2020/: Cargo.toml
crates/swc_ecma_compat_es2021/: Cargo.toml
crates/swc_ecma_compat_es2022/: Cargo.toml
crates/swc_ecma_compat_es3/: Cargo.toml
crates/swc_ecma_ext_transforms/: Cargo.toml
crates/swc_ecma_lints/: Cargo.toml
crates/swc_ecma_lints/examples/: all.rs
crates/swc_ecma_lints/tests/: fixture.rs
crates/swc_ecma_loader/: Cargo.toml
crates/swc_ecma_minifier/: Cargo.toml
crates/swc_ecma_minifier/benches/: full.rs
crates/swc_ecma_minifier/examples/: compress.rs  minifier.rs  minify-all.rs
crates/swc_ecma_minifier/tests/: compress.rs  eval.rs  exec.rs  format.rs  mangle.rs  terser_exec.rs
crates/swc_ecma_parser/: Cargo.toml
crates/swc_ecma_preset_env/: Cargo.toml
crates/swc_ecma_preset_env/benches/: polyfills.rs
crates/swc_ecma_preset_env/tests/: test.rs
crates/swc_ecma_quote/: Cargo.toml
crates/swc_ecma_quote_macros/: Cargo.toml
crates/swc_ecma_testing/: Cargo.toml
crates/swc_ecma_transforms/: Cargo.toml
crates/swc_ecma_transforms/tests/: decorators.rs  es2015_function_name.rs
crates/swc_ecma_transforms_base/: Cargo.toml
crates/swc_ecma_transforms_classes/: Cargo.toml
crates/swc_ecma_transforms_compat/: Cargo.toml
crates/swc_ecma_transforms_macros/: Cargo.toml
crates/swc_ecma_transforms_module/: Cargo.toml
crates/swc_ecma_transforms_optimization/: Cargo.toml
crates/swc_ecma_transforms_proposal/: Cargo.toml
crates/swc_ecma_transforms_react/: Cargo.toml
crates/swc_ecma_transforms_testing/: Cargo.toml
crates/swc_ecma_transforms_typescript/: Cargo.toml
crates/swc_ecma_usage_analyzer/: Cargo.toml
crates/swc_ecma_utils/: Cargo.toml
crates/swc_ecma_visit/: Cargo.toml
crates/swc_ecmascript/: Cargo.toml
crates/swc_eq_ignore_macros/: Cargo.toml
crates/swc_error_reporters/: Cargo.toml
crates/swc_estree_ast/: Cargo.toml
crates/swc_estree_compat/: Cargo.toml
crates/swc_estree_compat/benches/: babelify.rs
crates/swc_estree_compat/tests/: convert.rs  flavor.rs
crates/swc_fast_graph/: Cargo.toml
crates/swc_graph_analyzer/: Cargo.toml
crates/swc_graph_analyzer/tests/: cycle.rs
crates/swc_html/: Cargo.toml
crates/swc_html_ast/: Cargo.toml
crates/swc_html_codegen/: Cargo.toml
crates/swc_html_codegen_macros/: Cargo.toml
crates/swc_html_minifier/: Cargo.toml
crates/swc_html_parser/: Cargo.toml
crates/swc_html_utils/: Cargo.toml
crates/swc_html_visit/: Cargo.toml
crates/swc_macros_common/: Cargo.toml
crates/swc_malloc/: Cargo.toml
crates/swc_node_bundler/: Cargo.toml
crates/swc_node_comments/: Cargo.toml
crates/swc_nodejs_common/: Cargo.toml
crates/swc_plugin/: Cargo.toml
crates/swc_plugin_macro/: Cargo.toml
crates/swc_plugin_proxy/: Cargo.toml
crates/swc_plugin_runner/: Cargo.toml
crates/swc_plugin_testing/: Cargo.toml
crates/swc_timer/: Cargo.toml
crates/swc_trace_macro/: Cargo.toml
crates/swc_visit/: Cargo.toml
crates/swc_visit_macros/: Cargo.toml
crates/swc_xml/: Cargo.toml
crates/swc_xml_ast/: Cargo.toml
crates/swc_xml_codegen/: Cargo.toml
crates/swc_xml_codegen_macros/: Cargo.toml
crates/swc_xml_parser/: Cargo.toml
crates/swc_xml_visit/: Cargo.toml
crates/testing/: Cargo.toml
crates/testing_macros/: Cargo.toml
scripts/: ad_update_versions.ts
(+104 files in other folders)
