
[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>","OJ Kwon <kwon.ohjoong@gmail.com>"]
description = "Macros to build customized bindings interface"
edition = "2021"
license = "Apache-2.0"
name = "ad_binding_macros"
repository = "https://github.com/swc-project/swc.git"
version = "1.0.0"
_name = "binding_macros"

[lib]
bench = false

[features]
binding_native = []
binding_wasm = ["swc","swc_common","swc_ecma_transforms","swc_ecma_ast","swc_ecma_visit","once_cell","wasm-bindgen","wasm-bindgen-futures","js-sys","serde","serde-wasm-bindgen","anyhow","console_error_panic_hook"]

[dependencies.swc]
optional = true
version = "1.0.0"
path = "../swc"
package = "ad_swc"

[dependencies.swc_common]
optional = true
version = "1.0.0"
path = "../swc_common"
package = "ad_swc_common"

[dependencies.swc_ecma_ast]
optional = true
version = "1.0.0"
path = "../swc_ecma_ast"
package = "ad_swc_ecma_ast"

[dependencies.swc_ecma_transforms]
optional = true
version = "1.0.0"
path = "../swc_ecma_transforms"
package = "ad_swc_ecma_transforms"

[dependencies.swc_ecma_visit]
optional = true
version = "1.0.0"
path = "../swc_ecma_visit"
package = "ad_swc_ecma_visit"

[dependencies.anyhow]
optional = true
version = "1.0.71"

[dependencies.console_error_panic_hook]
optional = true
version = "0.1.7"

[dependencies.js-sys]
optional = true
version = "0.3.59"

[dependencies.once_cell]
optional = true
version = "1.18.0"

[dependencies.serde]
optional = true
version = "1"
features = ["derive"]

[dependencies.serde-wasm-bindgen]
optional = true
version = "0.4.5"

[dependencies.wasm-bindgen]
optional = true
version = "0.2.91"
features = ["enable-interning"]

[dependencies.wasm-bindgen-futures]
optional = true
version = "0.4.41"
