
[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "JsDoc parser writen in rust"
documentation = "https://rustdoc.swc.rs/jsdoc/"
edition = "2021"
include = ["Cargo.toml","src/**/*.rs"]
license = "Apache-2.0"
name = "ad_jsdoc"
version = "1.0.0"
_name = "jsdoc"

[lib]
bench = false

[features]
serde-impl = ["serde"]

[dependencies]
nom = "7.1.3"

[dependencies.serde]
version = "1"
features = ["derive"]
optional = true

[dependencies.swc_atoms]
version = "1.0.0"
path = "../swc_atoms"
package = "ad_swc_atoms"

[dependencies.swc_common]
version = "1.0.0"
path = "../swc_common"
package = "ad_swc_common"

[dev-dependencies]
anyhow = "1"
dashmap = "5.4.0"

[dev-dependencies.swc_ecma_ast]
version = "1.0.0"
path = "../swc_ecma_ast"
package = "ad_swc_ecma_ast"

[dev-dependencies.swc_ecma_parser]
version = "1.0.0"
path = "../swc_ecma_parser"
package = "ad_swc_ecma_parser"

[dev-dependencies.testing]
version = "1.0.0"
path = "../testing"
package = "ad_testing"
