
[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "Common logic for targetting vairous browsers"
documentation = "https://rustdoc.swc.rs/preset_env_base/"
edition = "2021"
license = "Apache-2.0"
name = "ad_preset_env_base"
version = "1.0.0"
_name = "preset_env_base"

[lib]
bench = false

[dependencies]
ahash = "0.8.8"
anyhow = "1"
browserslist-rs = "0.15.0"
dashmap = "5.4.0"
once_cell = "1.18.0"
st-map = "0.2.0"

[dependencies.semver]
version = "1.0.17"
features = ["serde"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tracing]
version = "0.1.37"

[dependencies.from_variant]
version = "1.0.0"
path = "../from_variant"
package = "ad_from_variant"
