
[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "Speedy web compiler"
documentation = "https://rustdoc.swc.rs/swc/"
edition = "2021"
include = ["Cargo.toml","src/**/*.rs"]
license = "Apache-2.0"
name = "ad_swc"
repository = "https://github.com/swc-project/swc.git"
version = "1.0.0"
_name = "swc"

[lib]
bench = false
name = "swc"

[features]
concurrent = ["swc_ecma_transforms/concurrent","swc_common/concurrent","swc_ecma_minifier/concurrent"]
debug = ["swc_ecma_visit/debug","swc_ecma_minifier/debug"]
default = ["es3"]
es3 = []
node = ["napi","napi-derive","swc_compiler_base/node"]
plugin = ["swc_plugin_runner/ecma","swc_plugin_runner/rkyv-impl","swc_plugin_proxy/plugin-rt","tokio"]
plugin_transform_schema_v1 = ["swc_common/plugin_transform_schema_v1","swc_plugin_runner/plugin_transform_schema_v1"]
plugin_transform_schema_vtest = ["swc_common/plugin_transform_schema_vtest","swc_plugin_runner/plugin_transform_schema_vtest"]
plugin_transform_host_js = ["swc_plugin_runner/plugin_transform_host_js"]
plugin_transform_host_native = ["swc_plugin_runner/plugin_transform_host_native"]

[dependencies]
anyhow = "1"
base64 = "0.21.0"
dashmap = "5.4.0"
either = "1"
lru = "0.10.0"
once_cell = "1.18.0"
parking_lot = "0.12.1"
pathdiff = "0.2.0"
regex = "1"
rustc-hash = "1.1.0"
serde_json = "1"
sourcemap = "6.4"
tracing = "0.1.37"
url = "2.4.0"

[dependencies.indexmap]
version = "2.0.0"
features = ["serde"]

[dependencies.jsonc-parser]
version = "0.21.0"
features = ["serde"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.swc_atoms]
version = "1.0.0"
path = "../swc_atoms"
package = "ad_swc_atoms"

[dependencies.swc_cached]
version = "1.0.0"
path = "../swc_cached"
package = "ad_swc_cached"

[dependencies.swc_common]
version = "1.0.0"
path = "../swc_common"
features = ["ahash","sourcemap","parking_lot"]
package = "ad_swc_common"

[dependencies.swc_compiler_base]
version = "1.0.0"
path = "../swc_compiler_base"
package = "ad_swc_compiler_base"

[dependencies.swc_config]
version = "1.0.0"
path = "../swc_config"
package = "ad_swc_config"

[dependencies.swc_ecma_ast]
version = "1.0.0"
path = "../swc_ecma_ast"
package = "ad_swc_ecma_ast"

[dependencies.swc_ecma_codegen]
version = "1.0.0"
path = "../swc_ecma_codegen"
package = "ad_swc_ecma_codegen"

[dependencies.swc_ecma_ext_transforms]
version = "1.0.0"
path = "../swc_ecma_ext_transforms"
package = "ad_swc_ecma_ext_transforms"

[dependencies.swc_ecma_lints]
version = "1.0.0"
path = "../swc_ecma_lints"
package = "ad_swc_ecma_lints"

[dependencies.swc_ecma_loader]
version = "1.0.0"
path = "../swc_ecma_loader"
features = ["cache","node","tsc"]
package = "ad_swc_ecma_loader"

[dependencies.swc_ecma_minifier]
version = "1.0.0"
path = "../swc_ecma_minifier"
package = "ad_swc_ecma_minifier"

[dependencies.swc_ecma_parser]
version = "1.0.0"
path = "../swc_ecma_parser"
package = "ad_swc_ecma_parser"

[dependencies.swc_ecma_preset_env]
version = "1.0.0"
path = "../swc_ecma_preset_env"
package = "ad_swc_ecma_preset_env"

[dependencies.swc_ecma_transforms]
version = "1.0.0"
path = "../swc_ecma_transforms"
features = ["compat","module","optimization","proposal","react","typescript"]
package = "ad_swc_ecma_transforms"

[dependencies.swc_ecma_transforms_base]
version = "1.0.0"
path = "../swc_ecma_transforms_base"
package = "ad_swc_ecma_transforms_base"

[dependencies.swc_ecma_transforms_compat]
version = "1.0.0"
path = "../swc_ecma_transforms_compat"
package = "ad_swc_ecma_transforms_compat"

[dependencies.swc_ecma_transforms_optimization]
version = "1.0.0"
path = "../swc_ecma_transforms_optimization"
package = "ad_swc_ecma_transforms_optimization"

[dependencies.swc_ecma_utils]
version = "1.0.0"
path = "../swc_ecma_utils"
package = "ad_swc_ecma_utils"

[dependencies.swc_ecma_visit]
version = "1.0.0"
path = "../swc_ecma_visit"
package = "ad_swc_ecma_visit"

[dependencies.swc_error_reporters]
version = "1.0.0"
path = "../swc_error_reporters"
package = "ad_swc_error_reporters"

[dependencies.swc_node_comments]
version = "1.0.0"
path = "../swc_node_comments"
package = "ad_swc_node_comments"

[dependencies.swc_plugin_proxy]
version = "1.0.0"
path = "../swc_plugin_proxy"
optional = true
package = "ad_swc_plugin_proxy"

[dependencies.swc_plugin_runner]
version = "1.0.0"
path = "../swc_plugin_runner"
optional = true
default-features = false
package = "ad_swc_plugin_runner"

[dependencies.swc_timer]
version = "1.0.0"
path = "../swc_timer"
package = "ad_swc_timer"

[dependencies.swc_visit]
version = "1.0.0"
path = "../swc_visit"
package = "ad_swc_visit"

[dependencies.tokio]
version = "1.36.0"
optional = true
features = ["rt","rt-multi-thread"]

[dependencies.napi-derive]
default-features = false
features = ["type-def"]
optional = true
version = "2.0.0"

[dependencies.napi]
default-features = false
features = ["napi3"]
optional = true
version = "2.0.0"

[dev-dependencies]
ansi_term = "0.12"
criterion = "0.5"
rayon = "1.7.0"
walkdir = "2"

[dev-dependencies.swc_ecma_ast]
version = "1.0.0"
path = "../swc_ecma_ast"
features = ["serde-impl"]
package = "ad_swc_ecma_ast"

[dev-dependencies.swc_ecma_lints]
version = "1.0.0"
path = "../swc_ecma_lints"
features = ["non_critical_lints"]
package = "ad_swc_ecma_lints"

[dev-dependencies.swc_ecma_testing]
version = "1.0.0"
path = "../swc_ecma_testing"
package = "ad_swc_ecma_testing"

[dev-dependencies.swc_malloc]
version = "1.0.0"
path = "../swc_malloc"
package = "ad_swc_malloc"

[dev-dependencies.testing]
version = "1.0.0"
path = "../testing"
package = "ad_testing"

[[example]]
name = "transform"

[[bench]]
harness = false
name = "bugs"

[[bench]]
harness = false
name = "minify"

[[bench]]
harness = false
name = "typescript"
