
[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>","OJ Kwon <kwon.ohjoong@gmail.com>"]
description = "Commandline for SWC (Internal crate with implementation)"
edition = "2021"
include = ["Cargo.toml","src/**/*.rs"]
license = "Apache-2.0"
name = "ad_swc_cli_impl"
repository = "https://github.com/swc-project/swc.git"
version = "1.0.0"
_name = "swc_cli_impl"

[[bin]]
name = "swc"
path = "src/main.rs"

[lib]
crate-type = ["rlib"]
path = "src/lib.rs"

[features]
default = []
plugin = ["swc_core/plugin_transform_host_native","swc_core/plugin_transform_host_native_filesystem_cache"]

[dependencies]
anyhow = "1.0.66"
atty = "0.2.14"
glob = "0.3.0"
rayon = "1"
relative-path = "1.6.1"
sourcemap = "6.4.1"
tracing = "0.1.37"
tracing-chrome = "0.5.0"
tracing-futures = "0.2.5"
walkdir = "2"

[dependencies.clap]
version = "3.2.25"
features = ["derive","wrap_help"]

[dependencies.path-absolutize]
version = "3.0.11"
features = ["once_cell_cache"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.serde_json]
version = "1"
features = ["unbounded_depth"]

[dependencies.tracing-subscriber]
version = "0.3.9"
features = ["env-filter"]

[dependencies.swc_core]
version = "1.0.0"
features = ["trace_macro","common_concurrent","base_concurrent"]
path = "../swc_core"
package = "ad_swc_core"

[dev-dependencies]
assert_cmd = "2.0.12"
assert_fs = "1.0.13"
