
[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "Base crate for the 'swc' crate. This is not a public API."
documentation = "https://rustdoc.swc.rs/swc_compiler_base/"
edition = "2021"
include = ["Cargo.toml","src/**/*.rs"]
license = "Apache-2.0"
name = "ad_swc_compiler_base"
repository = "https://github.com/swc-project/swc.git"
version = "1.0.0"
_name = "swc_compiler_base"

[features]
node = ["napi","napi-derive"]

[dependencies]
anyhow = "1.0.75"
base64 = "0.21.0"
once_cell = "1"
pathdiff = "0.2.0"
sourcemap = "6.4"

[dependencies.serde]
version = "1.0.188"
features = ["derive"]

[dependencies.swc_atoms]
version = "1.0.0"
path = "../swc_atoms"
package = "ad_swc_atoms"

[dependencies.swc_common]
version = "1.0.0"
path = "../swc_common"
features = ["sourcemap"]
package = "ad_swc_common"

[dependencies.swc_config]
version = "1.0.0"
path = "../swc_config"
package = "ad_swc_config"

[dependencies.swc_ecma_ast]
version = "1.0.0"
path = "../swc_ecma_ast"
package = "ad_swc_ecma_ast"

[dependencies.swc_ecma_codegen]
version = "1.0.0"
path = "../swc_ecma_codegen"
package = "ad_swc_ecma_codegen"

[dependencies.swc_ecma_minifier]
version = "1.0.0"
path = "../swc_ecma_minifier"
package = "ad_swc_ecma_minifier"

[dependencies.swc_ecma_parser]
version = "1.0.0"
path = "../swc_ecma_parser"
package = "ad_swc_ecma_parser"

[dependencies.swc_ecma_visit]
version = "1.0.0"
path = "../swc_ecma_visit"
package = "ad_swc_ecma_visit"

[dependencies.swc_timer]
version = "1.0.0"
path = "../swc_timer"
package = "ad_swc_timer"

[dependencies.napi-derive]
default-features = false
features = ["type-def"]
optional = true
version = "2.0.0"

[dependencies.napi]
default-features = false
features = ["napi3"]
optional = true
version = "2.0.0"
