
[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "CSS apis for rust"
documentation = "https://rustdoc.swc.rs/swc_css/"
edition = "2021"
license = "Apache-2.0"
name = "ad_swc_css"
repository = "https://github.com/swc-project/swc.git"
version = "1.0.0"
_name = "swc_css"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg","docsrs"]

[lib]
bench = false

[features]
compat = ["swc_css_compat"]
minifier = ["swc_css_minifier"]
modules = ["swc_css_modules"]
prefixer = ["swc_css_prefixer"]

[dependencies.swc_css_ast]
version = "1.0.0"
path = "../swc_css_ast"
package = "ad_swc_css_ast"

[dependencies.swc_css_codegen]
version = "1.0.0"
path = "../swc_css_codegen"
package = "ad_swc_css_codegen"

[dependencies.swc_css_compat]
version = "1.0.0"
path = "../swc_css_compat"
optional = true
package = "ad_swc_css_compat"

[dependencies.swc_css_minifier]
version = "1.0.0"
path = "../swc_css_minifier"
optional = true
package = "ad_swc_css_minifier"

[dependencies.swc_css_modules]
version = "1.0.0"
path = "../swc_css_modules"
optional = true
package = "ad_swc_css_modules"

[dependencies.swc_css_parser]
version = "1.0.0"
path = "../swc_css_parser"
package = "ad_swc_css_parser"

[dependencies.swc_css_prefixer]
version = "1.0.0"
path = "../swc_css_prefixer"
optional = true
package = "ad_swc_css_prefixer"

[dependencies.swc_css_utils]
version = "1.0.0"
path = "../swc_css_utils/"
package = "ad_swc_css_utils"

[dependencies.swc_css_visit]
version = "1.0.0"
path = "../swc_css_visit"
package = "ad_swc_css_visit"
