
[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "CSS code generator for the swc project"
documentation = "https://rustdoc.swc.rs/swc_css_codegen/"
edition = "2021"
include = ["Cargo.toml","src/**/*.rs"]
license = "Apache-2.0"
name = "ad_swc_css_codegen"
repository = "https://github.com/swc-project/swc.git"
version = "1.0.0"
_name = "swc_css_codegen"

[lib]
bench = false

[dependencies]
auto_impl = "1.1.0"
bitflags = "2.3.2"
rustc-hash = "1.1.0"
serde = "1.0.127"

[dependencies.swc_atoms]
version = "1.0.0"
path = "../swc_atoms"
package = "ad_swc_atoms"

[dependencies.swc_common]
version = "1.0.0"
path = "../swc_common"
package = "ad_swc_common"

[dependencies.swc_css_ast]
version = "1.0.0"
path = "../swc_css_ast"
package = "ad_swc_css_ast"

[dependencies.swc_css_codegen_macros]
version = "1.0.0"
path = "../swc_css_codegen_macros"
package = "ad_swc_css_codegen_macros"

[dependencies.swc_css_utils]
version = "1.0.0"
path = "../swc_css_utils"
package = "ad_swc_css_utils"

[dev-dependencies.swc_common]
version = "1.0.0"
path = "../swc_common"
features = ["sourcemap"]
package = "ad_swc_common"

[dev-dependencies.swc_css_parser]
version = "1.0.0"
path = "../swc_css_parser"
package = "ad_swc_css_parser"

[dev-dependencies.swc_css_visit]
version = "1.0.0"
path = "../swc_css_visit"
package = "ad_swc_css_visit"

[dev-dependencies.testing]
version = "1.0.0"
path = "../testing"
package = "ad_testing"
