
[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "CSS linter"
documentation = "https://rustdoc.swc.rs/swc_css_lints/"
edition = "2021"
include = ["Cargo.toml","src/**/*.rs"]
license = "Apache-2.0"
name = "ad_swc_css_lints"
repository = "https://github.com/swc-project/swc.git"
version = "1.0.0"
_name = "swc_css_lints"

[lib]
bench = false

[dependencies]
auto_impl = "1.1.0"
parking_lot = "0.12.1"
rayon = "1.7.0"
thiserror = "1.0.30"

[dependencies.serde]
version = "1.0.133"
features = ["derive"]

[dependencies.swc_atoms]
version = "1.0.0"
path = "../swc_atoms"
package = "ad_swc_atoms"

[dependencies.swc_cached]
version = "1.0.0"
path = "../swc_cached"
package = "ad_swc_cached"

[dependencies.swc_common]
version = "1.0.0"
path = "../swc_common"
package = "ad_swc_common"

[dependencies.swc_css_ast]
version = "1.0.0"
path = "../swc_css_ast"
package = "ad_swc_css_ast"

[dependencies.swc_css_visit]
version = "1.0.0"
path = "../swc_css_visit"
package = "ad_swc_css_visit"

[dev-dependencies]
serde_json = "1.0.79"

[dev-dependencies.swc_css_parser]
version = "1.0.0"
path = "../swc_css_parser"
package = "ad_swc_css_parser"

[dev-dependencies.testing]
version = "1.0.0"
path = "../testing"
package = "ad_testing"
