
[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "CSS modules"
documentation = "https://rustdoc.swc.rs/swc_css_modules/"
edition = "2021"
include = ["Cargo.toml","src/**/*.rs"]
license = "Apache-2.0"
name = "ad_swc_css_modules"
repository = "https://github.com/swc-project/swc.git"
version = "1.0.0"
_name = "swc_css_modules"

[lib]
bench = false

[dependencies]
rustc-hash = "1.1.0"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.swc_atoms]
version = "1.0.0"
path = "../swc_atoms"
package = "ad_swc_atoms"

[dependencies.swc_common]
version = "1.0.0"
path = "../swc_common"
package = "ad_swc_common"

[dependencies.swc_css_ast]
version = "1.0.0"
path = "../swc_css_ast"
package = "ad_swc_css_ast"

[dependencies.swc_css_codegen]
version = "1.0.0"
path = "../swc_css_codegen"
package = "ad_swc_css_codegen"

[dependencies.swc_css_parser]
version = "1.0.0"
path = "../swc_css_parser"
package = "ad_swc_css_parser"

[dependencies.swc_css_visit]
version = "1.0.0"
path = "../swc_css_visit"
package = "ad_swc_css_visit"

[dev-dependencies]
serde_json = "1"

[dev-dependencies.swc_css_compat]
version = "1.0.0"
path = "../swc_css_compat"
package = "ad_swc_css_compat"

[dev-dependencies.testing]
version = "1.0.0"
path = "../testing"
package = "ad_testing"
