
[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "CSS parser"
documentation = "https://rustdoc.swc.rs/swc_css_parser/"
edition = "2021"
include = ["Cargo.toml","src/**/*.rs"]
license = "Apache-2.0"
name = "ad_swc_css_parser"
repository = "https://github.com/swc-project/swc.git"
version = "1.0.0"
_name = "swc_css_parser"

[lib]
bench = false

[features]
debug = []

[dependencies]
lexical = "6.1.0"
serde = "1.0.127"

[dependencies.swc_atoms]
version = "1.0.0"
path = "../swc_atoms"
package = "ad_swc_atoms"

[dependencies.swc_common]
version = "1.0.0"
path = "../swc_common"
package = "ad_swc_common"

[dependencies.swc_css_ast]
version = "1.0.0"
path = "../swc_css_ast"
package = "ad_swc_css_ast"

[dev-dependencies]
criterion = "0.5"
serde_json = "1.0.66"

[dev-dependencies.swc_css_ast]
version = "1.0.0"
path = "../swc_css_ast"
features = ["serde-impl"]
package = "ad_swc_css_ast"

[dev-dependencies.swc_css_visit]
version = "1.0.0"
path = "../swc_css_visit"
package = "ad_swc_css_visit"

[dev-dependencies.swc_malloc]
version = "1.0.0"
path = "../swc_malloc"
package = "ad_swc_malloc"

[dev-dependencies.testing]
version = "1.0.0"
path = "../testing"
package = "ad_testing"

[[bench]]
harness = false
name = "compare"

[[bench]]
harness = false
name = "lexer"

[[bench]]
harness = false
name = "parser"
