
[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "Port of stylis"
documentation = "https://rustdoc.swc.rs/swc_css_utils/"
edition = "2021"
include = ["Cargo.toml","src/**/*.rs","src/**/*.json"]
license = "Apache-2.0"
name = "ad_swc_css_utils"
repository = "https://github.com/swc-project/swc.git"
version = "1.0.0"
_name = "swc_css_utils"

[lib]
bench = false

[dependencies]
once_cell = "1.18.0"
serde_json = "1.0.61"

[dependencies.serde]
version = "1.0.118"
features = ["derive"]

[dependencies.swc_atoms]
version = "1.0.0"
path = "../swc_atoms"
package = "ad_swc_atoms"

[dependencies.swc_common]
version = "1.0.0"
path = "../swc_common"
package = "ad_swc_common"

[dependencies.swc_css_ast]
version = "1.0.0"
path = "../swc_css_ast"
package = "ad_swc_css_ast"

[dependencies.swc_css_visit]
version = "1.0.0"
path = "../swc_css_visit"
package = "ad_swc_css_visit"
